--- a/config/local.yaml
+++ b/config/local.yaml
@@ -1,7 +1,7 @@
 env: "local"
 
 http_server: 
-  address: "localhost:8081"
+  address: "localhost:8080"
   timeout: 4s
   idle_timeout: 60s 
 
@@ -9,16 +9,16 @@ db:
   host: "localhost"
   port: 5432
   user: "postgres"
-  password: ""
+  password: "postgres123"
   dbname: "L0_db"
   sslmode: "disable"
 
 kafka:
   brokers: ["127.0.0.1:9092"]
-  topic: ""
-  group_id: ""
-  dlq_topic: ""
-  client_id: ""
+  topic: "orders"
+  group_id: "orderservice"
+  dlq_topic: "orders-dlq"
+  client_id: "orderservice"
 
 cache:
   max_entries: 2000
