--- a/docker-compose.postgres.yml
+++ b/docker-compose.postgres.yml
@@ -5,16 +5,16 @@ services:
     container_name: pg-orders
     restart: unless-stopped
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres123
-      POSTGRES_DB: L0_db
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
       - "5433:5432"               
     volumes:
       - pgdata:/var/lib/postgresql/data
       
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ordersvc -d ordersvc_db"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 5s
       timeout: 3s
       retries: 20
